--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "enbot",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "noisy bot for levels",
+    "private": true,
     "repository": {
         "type": "git",
         "url": "git://github.com/feugenix/enbot.git"
@@ -10,11 +11,21 @@
         "node": "0.10"
     },
     "dependencies": {
-        "casperjs": "1.1.0-beta3"
+        "casperjs": "1.1.0-beta3",
+        "express": "~4.9.0",
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "morgan": "~1.3.0",
+        "serve-favicon": "~2.1.3",
+        "debug": "~2.0.0",
+        "jade": "~1.6.0"
     },
     "devDependencies": {
-        "jscs": "1.5.9",
-        "jshint": "2.1.4"
+        "jscs": "~1.5.9",
+        "jshint": "~2.1.4",
+        "express-generator": "~4.9.0"
     },
-    "private": true
+    "scripts": {
+        "start": "casperjs ./bin/www"
+    }
 }
